--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "mongodb-cli"]
 	path = mongodb-cli
 	url = https://github.com/Chunshan-Theta/mongodb-cli.git
+[submodule "sessionscript"]
+	path = sessionscript
+	url = https://github.com/Chunshan-Theta/sessionscript.git
